@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-10T08:11:40Z",
+  "timestamp" : "2022-06-13T08:11:43Z",
   "count_outdated" : 391,
   "uniques_outdated" : 20,
-  "count" : 410,
+  "count" : 408,
   "uniques" : 26,
   "views" : [
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 2, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
