@@ -1,10 +1,10 @@
 {
-  "count": 19,
+  "count": 17,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "uniques": 1
     },
     {
